change the way the index.html is read from the classpath